@@ -324,6 +324,11 @@ if test "x$enable_ipv6" = xyes ; then
         AC_DEFINE(UPNP_ENABLE_IPV6, 1, [see upnpconfig.h])
 fi
 
+RT_BOOL_ARG_ENABLE([open_ssl], [no], [open-ssl support])
+if test "x$enable_open_ssl" = xyes ; then
+        AC_DEFINE(UPNP_ENABLE_OPEN_SSL, 1, [see upnpconfig.h])
+fi
+
 RT_BOOL_ARG_ENABLE([notification_reordering], [yes], [GENA notification reordering in gena_device.c])
 if test "x$enable_notification_reordering" = xyes ; then
         AC_DEFINE(UPNP_ENABLE_NOTIFICATION_REORDERING, 1, [see upnpconfig.h])
